// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caller count should increment caller count 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        Thanks for calling. This was the 2nd time you've called.
    </Say>
</Response>
`;

exports[`Caller count should return well-formed XML 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        Thanks for calling. This was the 1st time you've called.
    </Say>
</Response>
`;
